several improvements and clean ups.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15959 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/src/org/mmbase/datatypes/resources/datatypes.properties
+++ b/src/org/mmbase/datatypes/resources/datatypes.properties
@@ -53,10 +53,10 @@ xml.minLength.error=The document must be ${CONSTRAINT} or more bytes long.
 xml.maxLength.error=The document must be no more than ${CONSTRAINT} bytes long.
 
 
-unknown.enumeration.error=The value '${VALUE}' is not an enumerationvalue of ${CONSTRAINT}
-integer.enumeration.error=The value '${VALUE}' is not an enumerationvalue of ${CONSTRAINT}
-string.enumeration.error=The value '${VALUE}' is not an enumerationvalue of ${CONSTRAINT}
-long.enumeration.error=The value '${VALUE}' is not an enumerationvalue of ${CONSTRAINT}
+integer.enumeration.error=The value '${VALUE}' is not one of ${CONSTRAINT}
+long.enumeration.error=The value '${VALUE}' is not one of ${CONSTRAINT}
+string.enumeration.error=The value '${VALUE}' is not one of ${CONSTRAINT}
+node.enumeration.error=The value '${VALUE}' is not one of ${CONSTRAINT}
 
 node.type.error=The value '${VALUE}' is not a valid node value
 integer.type.error=The value '${VALUE}' is not a valid integer value
@@ -68,3 +68,5 @@ datetime.type.error=The value '${VALUE}' is not a valid datetime value
 binary.type.error=The value '${VALUE}' is not a valid binary value
 xml.type.error=The value '${VALUE}' is not a valid xml value
 string.type.error=The value '${VALUE}' is not a valid string value
+
+string.confirmpassword.error=Confirmation password not equal to new password value.
