minor change for srcdist build
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15998 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/build.xml
+++ b/contributions/didactor2/build.xml
@@ -415,6 +415,7 @@
   <target name="precompiledwar" depends="precompile,war" />
 
   <target name="srcdist">
+    <mkdir dir="${build.dir}" />
     <zip destfile="${build.dir}/didactor-src.zip"
          basedir=".">
       <include name="src/**"/>
@@ -422,6 +423,7 @@
       <include name="build.properties"/>
       <include name="*.xml" />
       <exclude name="**/CVS"/>
+      <exclude name="src/netg"/>
     </zip>
   </target>
 
